# FW-Roedingen

./: .gitignore  .gitmodules  Procfile  README.md  TODO.md  amplify.yml  bun.lockb  docker-compose.yml  heroku.sh  heroku.yml  kommentare.js  next.config.js  nginx.conf  nginx.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redwood.toml  tsconfig.json  turbo.json
.cert/: localhost.key  localhost.pem
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  save-config.sh  start-openvpn.sh
.github/workflows/: FW-Roedingen-build.yaml  FW-Roedingen-orchestration.yaml  main.yml
amplify/: team-provider-info.json
amplify/.config/: project-config.json
apps/games/fireverse/: .gitignore  CMakeLists.txt  asconfig.json  index.html  main.cpp  package.json  server.js  tsconfig.json
apps/games/fireverse/react/: entry-client.ts  entry-server.ts
apps/games/fireverse/react/components/: App.tsx
apps/games/fireverse/src/: hardware.cpp  system.cpp  window.cpp
apps/games/fireverse/src/include/: hardware.h  system.h  window.h
backend/: go.mod  go.sum
cli/: create_microservice.sh  postgres.sh  run.sh  startServices.sh
frontend/: README.md  pnpm-lock.yaml
graphql/: .gitignore  Dockerfile  codegen.yml  package.json  tsconfig.json
localServices/: .gitignore  docker-compose.yml
mobile/: babel.config.js  package.json
server/: Database.ts  index.ts
shared/: FwrProvider.ts  index.ts  package.json  tsconfig.json
src/: enviroments.d.ts  index.css
sso/: package.json  tsconfig.json  wrangler.toml
types/: notification.d.ts  user.d.ts
(+893 files in other folders)
